--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <rest.assured.version>4.3.3</rest.assured.version>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
+        <allure.maven.version>2.10.0</allure.maven.version>
+        <allure.junit5.version>2.13.8</allure.junit5.version>
     </properties>
 
     <dependencies>
@@ -49,7 +51,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>${allure.junit5.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -64,8 +71,15 @@
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
                     <includes>
-                        <include>**/*Test.java</include>
+                        <include>**/*Test*.java</include>
+                        <forkCount>8</forkCount>
                     </includes>
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>io.qameta.allure.junit5.AllureJunit5</value>
+                        </property>
+                    </properties>
                 </configuration>
                 <!--<dependencies>
                     <dependency>
@@ -81,6 +95,14 @@
                         <scope>test</scope>
                     </dependency>
                 </dependencies>-->
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure.maven.version}</version>
+                <configuration>
+                    <resultDirectory>${project.basedir}/allure-results</resultDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
